k8s/pgadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: redisstudy
spec:
  ports:
  - protocol: TCP
    port: 5050
    targetPort: http
  selector:
    component: pgadmin
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: redisstudy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pgadmin
  template:
    metadata:
      labels:
        component: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: thajeztah/pgadmin4
          ports:
            - name: http
              containerPort: 5050
              protocol: TCP
          volumeMounts:
            - name: pgadmin-volume
              mountPath: /pgadmin
      volumes:
        - name: pgadmin-volume
          persistentVolumeClaim:
            claimName: pgadmin-volume-claim
