k8s/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: redisstudy
spec:
  type: NodePort
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: http
      protocol: TCP
      nodePort: 31800
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: redisstudy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.13-alpine
          ports:
            - name: http
              containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: postgres-volume-claim
