k8s/redis-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redisstudy
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: redisstudy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: docker-registry:5000/redisstudy-redis:latest
          ports:
            - name: http
              containerPort: 6379
              protocol: TCP
