k8s/redisstudy-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisstudy
spec:
  type: ClusterIP
  selector:
    component: redisstudy-redisstudy
  ports:
  - protocol: TCP
    port: 8400
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisstudy-redisstudy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redisstudy-redisstudy
  template:
    metadata:
      labels:
        component: redisstudy-redisstudy
    spec:
      containers:
      - name: redisstudy-redisstudy
        image: docker-registry:5000/redisstudy-redisstudy:1.1.3-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8400
          protocol: TCP
