k8s/webservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice
  namespace: redisstudy
  labels:
    monitored: prometheus
spec:
  type: ClusterIP
  selector:
    component: webservice
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webservice
  namespace: redisstudy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: webservice
  template:
    metadata:
      labels:
        component: webservice
    spec:
      containers:
      - name: webservice
        image: docker-registry:5000/redisstudy-redisstudy:1.1.7-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
