k8s/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: redisstudy
  annotations:
    nginx.ingress.kubernetes.io/use-regex: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: pgadmin.redisstudy.k8s-test.perit.hu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin-service
            port:
              name: http
