k8s/redisstudy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisstudy-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: /$1
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: redisstudy.k8s-test.perit.hu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redisstudy
            port:
              name: http
