k8s/webservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservice-ingress
  namespace: redisstudy
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - webservice.redisstudy.k8s-test.perit.local
      secretName: templatekey
  rules:
  - host: webservice.redisstudy.k8s-test.perit.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webservice
            port:
              name: http
